--- a/Clear Choice/Resources/Theme.xaml
+++ b/Clear Choice/Resources/Theme.xaml
@@ -1,11 +1,10 @@
 ﻿<ResourceDictionary
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:WpfToolkit="http://schemas.microsoft.com/wpf/2008/toolkit"
-    xmlns:Primitives="clr-namespace:Microsoft.Windows.Controls.Primitives;assembly=WPFToolkit">
+    xmlns:Microsoft_Windows_Themes="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero">
 
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="Brushes.xaml"/>
+    	<ResourceDictionary Source="Brushes.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 
     <!-- Value converters -->
@@ -20,8 +19,7 @@
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Thumb}">
                     <Border Padding="{TemplateBinding Padding}"
-							Background="{TemplateBinding Background}">
-                    </Border>
+							Background="{TemplateBinding Background}"/>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
@@ -36,12 +34,12 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Thumb}">
-                    <Border Name="Border"
+                    <Border x:Name="Border"
 							Padding="{TemplateBinding Padding}" 
 							Background="{TemplateBinding Background}">
                         <Canvas>
                             <Line RenderOptions.EdgeMode="Aliased" Stroke="#88B0E4"
-								  X1="7" Y1="{Binding ElementName=Border, Path=ActualHeight}"
+								  X1="7" Y1="{Binding ActualHeight, ElementName=Border}"
 								  X2="7" Y2="0"/>
                         </Canvas>
                     </Border>
@@ -50,16 +48,16 @@
         </Setter>
     </Style>
     <!-- DataGridColumnHeader Style -->
-    <Style x:Key="ColumnHeaderStyle" TargetType="{x:Type WpfToolkit:DataGridColumnHeader}">
+    <Style x:Key="ColumnHeaderStyle" TargetType="{x:Type DataGridColumnHeader}">
         <Setter Property="VerticalContentAlignment" Value="Center" />
         <Setter Property="Background" Value="{StaticResource HeaderBackgroundBrush}"/>
         <Setter Property="BorderBrush" Value="{StaticResource HeaderBorderBrush}" />
         <Setter Property="BorderThickness" Value="0,1,0,1" />
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="{x:Type WpfToolkit:DataGridColumnHeader}">
+                <ControlTemplate TargetType="{x:Type DataGridColumnHeader}">
                     <Grid>
-                        <WpfToolkit:DataGridHeaderBorder
+                        <Microsoft_Windows_Themes:DataGridHeaderBorder
 							x:Name="headerBorder"
 							SortDirection="{TemplateBinding SortDirection}"
 							IsHovered="{TemplateBinding IsMouseOver}"
@@ -79,7 +77,7 @@
 									VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
 									HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" />
 							</Border>
-                        </WpfToolkit:DataGridHeaderBorder>
+                            </Microsoft_Windows_Themes:DataGridHeaderBorder>
 
                         <Thumb x:Name="PART_LeftHeaderGripper"
 							   HorizontalAlignment="Left"
@@ -102,38 +100,38 @@
             </Setter.Value>
         </Setter>
     </Style>
-    <Style x:Key="{x:Type WpfToolkit:DataGridRow}" TargetType="{x:Type WpfToolkit:DataGridRow}">
+    <Style x:Key="{x:Type DataGridRow}" TargetType="{x:Type DataGridRow}">
         <Setter Property="SnapsToDevicePixels" Value="true"/>
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="{x:Type WpfToolkit:DataGridRow}">
+                <ControlTemplate TargetType="{x:Type DataGridRow}">
                     <Border x:Name="DGR_Border"
                   Background="{TemplateBinding Background}"
                   BorderBrush="{TemplateBinding BorderBrush}"
                   BorderThickness="{TemplateBinding BorderThickness}"
                   SnapsToDevicePixels="True">
-                        <WpfToolkit:SelectiveScrollingGrid>
-                            <Grid.ColumnDefinitions>
+                        <SelectiveScrollingGrid>
+                            <SelectiveScrollingGrid.ColumnDefinitions>
                                 <ColumnDefinition Width="Auto"/>
                                 <ColumnDefinition Width="*"/>
-                            </Grid.ColumnDefinitions>
+                            </SelectiveScrollingGrid.ColumnDefinitions>
 
-                            <Grid.RowDefinitions>
+                            <SelectiveScrollingGrid.RowDefinitions>
                                 <RowDefinition Height="*"/>
                                 <RowDefinition Height="Auto"/>
-                            </Grid.RowDefinitions>
+                            </SelectiveScrollingGrid.RowDefinitions>
 
-                            <WpfToolkit:DataGridCellsPresenter Grid.Column="1"
+                            <DataGridCellsPresenter Grid.Column="1"
                                          ItemsPanel="{TemplateBinding ItemsPanel}"
                                          SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
 
-                            <WpfToolkit:DataGridRowHeader WpfToolkit:SelectiveScrollingGrid.SelectiveScrollingOrientation="Vertical"  Grid.RowSpan="2"
-                                                          Visibility="{Binding RelativeSource={RelativeSource AncestorType={x:Type WpfToolkit:DataGrid}},Path=HeadersVisibility,Converter={x:Static WpfToolkit:DataGrid.HeadersVisibilityConverter},ConverterParameter={x:Static WpfToolkit:DataGridHeadersVisibility.Row}}"/>
+                            <DataGridRowHeader SelectiveScrollingGrid.SelectiveScrollingOrientation="Vertical"  Grid.RowSpan="2"
+                                                          Visibility="{Binding HeadersVisibility, ConverterParameter={x:Static DataGridHeadersVisibility.Row}, Converter={x:Static DataGrid.HeadersVisibilityConverter}, RelativeSource={RelativeSource AncestorType={x:Type DataGrid}}}"/>
                             
                             <!-- For Debugging-->
-                            <!--<WpfToolkit:DataGridDetailsPresenter Grid.Column="1" Grid.Row="1"/>-->
+                            <!--<DataGridDetailsPresenter Grid.Column="1" Grid.Row="1"/>-->
 
-                        </WpfToolkit:SelectiveScrollingGrid>
+                        </SelectiveScrollingGrid>
                     </Border>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
@@ -161,15 +159,15 @@
         </Setter>
     </Style>
     <!-- DataGridRowHeader Style -->
-    <Style x:Key="{x:Type WpfToolkit:DataGridRowHeader}"
-		   TargetType="{x:Type WpfToolkit:DataGridRowHeader}">
+    <Style x:Key="{x:Type DataGridRowHeader}"
+		   TargetType="{x:Type DataGridRowHeader}">
         <Setter Property="Background" Value="{StaticResource HeaderBackgroundBrush}" />
         <Setter Property="BorderBrush" Value="{StaticResource HeaderBorderBrush}" />
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="{x:Type WpfToolkit:DataGridRowHeader}">
+                <ControlTemplate TargetType="{x:Type DataGridRowHeader}">
                     <Grid>
-                        <WpfToolkit:DataGridHeaderBorder 
+                        <Microsoft_Windows_Themes:DataGridHeaderBorder 
 							x:Name="headerBorder"
 							IsSelected="{TemplateBinding IsRowSelected}"
 							IsHovered ="{TemplateBinding IsMouseOver}"
@@ -189,13 +187,13 @@
 										VerticalAlignment="Center"/>
                                     <Control
 										SnapsToDevicePixels="false"
-										Visibility="{Binding RelativeSource={RelativeSource AncestorType={x:Type WpfToolkit:DataGridRow}}, Path=(Validation.HasError), Converter={StaticResource bool2VisibilityConverter}}"
-										Template="{Binding RelativeSource={RelativeSource AncestorType={x:Type WpfToolkit:DataGridRow}}, Path=ValidationErrorTemplate}"
+										Visibility="{Binding (Validation.HasError), Converter={StaticResource bool2VisibilityConverter}, RelativeSource={RelativeSource AncestorType={x:Type DataGridRow}}}"
+										Template="{Binding ValidationErrorTemplate, RelativeSource={RelativeSource AncestorType={x:Type DataGridRow}}}"
                                         VerticalAlignment="Center"
                                         HorizontalAlignment="Center"/>
                                 </StackPanel>
                             </Border>
-                        </WpfToolkit:DataGridHeaderBorder>
+                            </Microsoft_Windows_Themes:DataGridHeaderBorder>
 
                         <Thumb x:Name="PART_TopHeaderGripper"
 							   VerticalAlignment="Top"
@@ -251,7 +249,7 @@
         </ControlTemplate.Triggers>
     </ControlTemplate>
     <!-- DataGrid Style -->
-    <Style x:Key="{x:Type WpfToolkit:DataGrid}" TargetType="{x:Type WpfToolkit:DataGrid}">
+    <Style x:Key="{x:Type DataGrid}" TargetType="{x:Type DataGrid}">
         <Setter Property="Background" Value="{StaticResource DefaultControlBackgroundBrush}"/>
         <Setter Property="Foreground" Value="{StaticResource DefaultControlForegroundBrush}"/>
         <Setter Property="BorderBrush" Value="{StaticResource DefaultControlBorderBrush}" />
@@ -265,14 +263,14 @@
         <Setter Property="ScrollViewer.CanContentScroll" Value="true"/>
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="{x:Type WpfToolkit:DataGrid}">
+                <ControlTemplate TargetType="{x:Type DataGrid}">
                     <Border
 						Background="{TemplateBinding Background}"
 						BorderBrush="{TemplateBinding BorderBrush}"
 						BorderThickness="{TemplateBinding BorderThickness}"
 						SnapsToDevicePixels="True"
 						Padding="{TemplateBinding Padding}">
-                        <ScrollViewer Focusable="false" Name="DG_ScrollViewer">
+                        <ScrollViewer Focusable="false" x:Name="DG_ScrollViewer">
                             <ScrollViewer.Template>
                                 <ControlTemplate TargetType="{x:Type ScrollViewer}">
                                     <Grid>
@@ -290,40 +288,40 @@
 
                                         <!--Left Column Header Corner -->
                                         <Button 
-											Command="{x:Static WpfToolkit:DataGrid.SelectAllCommand}"
-											Width="{Binding RelativeSource={RelativeSource AncestorType={x:Type WpfToolkit:DataGrid}}, Path=CellsPanelHorizontalOffset}"
+											Command="{x:Static DataGrid.SelectAllCommand}"
+											Width="{Binding CellsPanelHorizontalOffset, RelativeSource={RelativeSource AncestorType={x:Type DataGrid}}}"
 											Focusable="false"
-											Visibility="{Binding RelativeSource={RelativeSource AncestorType={x:Type WpfToolkit:DataGrid}}, Path=HeadersVisibility, Converter={x:Static WpfToolkit:DataGrid.HeadersVisibilityConverter}, ConverterParameter={x:Static WpfToolkit:DataGridHeadersVisibility.All}}" 
+											Visibility="{Binding HeadersVisibility, ConverterParameter={x:Static DataGridHeadersVisibility.All}, Converter={x:Static DataGrid.HeadersVisibilityConverter}, RelativeSource={RelativeSource AncestorType={x:Type DataGrid}}}" 
 											Template="{StaticResource SelectAllButtonTemplate}"/>
                                         <!--Column Headers-->
-                                        <Primitives:DataGridColumnHeadersPresenter 
+                                        <DataGridColumnHeadersPresenter 
 											Grid.Column="1" 
-											Name="PART_ColumnHeadersPresenter"
-											Visibility="{Binding RelativeSource={RelativeSource AncestorType={x:Type WpfToolkit:DataGrid}}, Path=HeadersVisibility, Converter={x:Static WpfToolkit:DataGrid.HeadersVisibilityConverter}, ConverterParameter={x:Static WpfToolkit:DataGridHeadersVisibility.Column}}"/>
+											x:Name="PART_ColumnHeadersPresenter"
+											Visibility="{Binding HeadersVisibility, ConverterParameter={x:Static DataGridHeadersVisibility.Column}, Converter={x:Static DataGrid.HeadersVisibilityConverter}, RelativeSource={RelativeSource AncestorType={x:Type DataGrid}}}"/>
 
                                         <!--DataGrid content-->
                                         <ScrollContentPresenter x:Name="PART_ScrollContentPresenter" Grid.Row="1" Grid.ColumnSpan="2" CanContentScroll="{TemplateBinding CanContentScroll}" />
 
                                         <ScrollBar
-											Grid.Row="0" Grid.RowSpan="2" Grid.Column="2" Name="PART_VerticalScrollBar"
+											Grid.Row="0" Grid.RowSpan="2" Grid.Column="2" x:Name="PART_VerticalScrollBar"
 											Orientation="Vertical"
 											Maximum="{TemplateBinding ScrollableHeight}"
 											ViewportSize="{TemplateBinding ViewportHeight}"
-											Value="{Binding Path=VerticalOffset, RelativeSource={RelativeSource TemplatedParent}, Mode=OneWay}"
+											Value="{Binding VerticalOffset, Mode=OneWay, RelativeSource={RelativeSource TemplatedParent}}"
 											Visibility="{TemplateBinding ComputedVerticalScrollBarVisibility}"/>
 
                                         <Grid Grid.Row="2" Grid.Column="1">
                                             <Grid.ColumnDefinitions>
-                                                <ColumnDefinition Width="{Binding RelativeSource={RelativeSource AncestorType={x:Type WpfToolkit:DataGrid}}, Path=NonFrozenColumnsViewportHorizontalOffset}"/>
+                                                <ColumnDefinition Width="{Binding NonFrozenColumnsViewportHorizontalOffset, RelativeSource={RelativeSource AncestorType={x:Type DataGrid}}}"/>
                                                 <ColumnDefinition Width="*"/>
                                             </Grid.ColumnDefinitions>
                                             <ScrollBar 
 												Grid.Column="1"
-												Name="PART_HorizontalScrollBar"
+												x:Name="PART_HorizontalScrollBar"
 												Orientation="Horizontal"
 												Maximum="{TemplateBinding ScrollableWidth}"
 												ViewportSize="{TemplateBinding ViewportWidth}"
-												Value="{Binding Path=HorizontalOffset, RelativeSource={RelativeSource TemplatedParent}, Mode=OneWay}"
+												Value="{Binding HorizontalOffset, Mode=OneWay, RelativeSource={RelativeSource TemplatedParent}}"
 												Visibility="{TemplateBinding ComputedHorizontalScrollBarVisibility}"/>
                                         </Grid>
                                     </Grid>
@@ -341,5 +339,16 @@
             </Trigger>
         </Style.Triggers>
     </Style>
-
+	<Style x:Key="ColumnHeaderGripperStyle" TargetType="{x:Type Thumb}">
+		<Setter Property="Width" Value="8"/>
+		<Setter Property="Background" Value="Transparent"/>
+		<Setter Property="Cursor" Value="SizeWE"/>
+		<Setter Property="Template">
+			<Setter.Value>
+				<ControlTemplate TargetType="{x:Type Thumb}">
+					<Border Background="{TemplateBinding Background}" Padding="{TemplateBinding Padding}"/>
+				</ControlTemplate>
+			</Setter.Value>
+		</Setter>
+	</Style>
 </ResourceDictionary>
