--- a/Clear Choice/Views/InventoryView.xaml
+++ b/Clear Choice/Views/InventoryView.xaml
@@ -1,8 +1,8 @@
 ﻿<UserControl x:Class="Clear_Choice.Views.InventoryView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:UIControls="clr-namespace:Stemstudios.UIControls;assembly=UIControls"
-             xmlns:toolkit="http://schemas.microsoft.com/wpf/2008/toolkit" IsVisibleChanged="UserControl_IsVisibleChanged">
+    xmlns:UIControls="clr-namespace:Stemstudios.UIControls;assembly=UIControls"
+    IsVisibleChanged="UserControl_IsVisibleChanged">
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -91,7 +91,7 @@
                 </Grid>
             </GroupBox>
             <Image Name="TabShowHideButton" Grid.Row="1" HorizontalAlignment="Center" MouseDown="TabShowHideButton_MouseDown" Width="135" Height="27"/>
-            <toolkit:DataGrid Grid.Row="2"
+            <DataGrid Grid.Row="2"
                               Name="inventoryGridView" 
                               Margin="10" 
                               CanUserAddRows="False" 
@@ -104,7 +104,7 @@
                               FontSize="12"
                               SelectionChanged="inventoryGridView_SelectionChanged">
 
-            </toolkit:DataGrid>
+            </DataGrid>
         </Grid>
     </Border>
 </UserControl>
