--- a/Clear Choice/Views/LotRepairsView.xaml
+++ b/Clear Choice/Views/LotRepairsView.xaml
@@ -3,7 +3,6 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:toolkit="http://schemas.microsoft.com/wpf/2008/toolkit"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300" IsVisibleChanged="UserControl_IsVisibleChanged">
     <UserControl.Resources>
@@ -15,7 +14,7 @@
         </ResourceDictionary>
     </UserControl.Resources>
     <Grid>
-        <toolkit:DataGrid Name="dgRepairs"
+        <DataGrid Name="dgRepairs"
                            Margin="10" 
                            CanUserAddRows="False" 
                            CanUserDeleteRows="False" 
