--- a/Clear Choice/Windows/InventoryItemSelector.xaml
+++ b/Clear Choice/Windows/InventoryItemSelector.xaml
@@ -1,7 +1,6 @@
 ﻿<Window x:Class="Clear_Choice.Windows.InventoryItemSelector"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:toolkit="http://schemas.microsoft.com/wpf/2008/toolkit"
     xmlns:UIControls="clr-namespace:Stemstudios.UIControls;assembly=UIControls"
     Title="Inventory Item Selector" Height="300" Width="600">
     <Window.Resources>
@@ -28,7 +27,7 @@
         <TextBlock Text="Category:" Grid.Column="0" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center"/>
         <UIControls:SComboBox Name="cmboCategory" Grid.Column="1" Grid.Row="1" Margin="5" SelectionChanged="cmboCategory_SelectionChanged"/>
         
-        <toolkit:DataGrid x:Name="dgItems" Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="2"
+        <DataGrid x:Name="dgItems" Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="2"
                           AutoGenerateColumns="True" Margin="5"
                           CanUserAddRows="False" 
                           CanUserDeleteRows="False" 
