--- a/Clear Choice/Windows/SiteLotSelector.xaml
+++ b/Clear Choice/Windows/SiteLotSelector.xaml
@@ -1,7 +1,6 @@
 ﻿<Window x:Class="Clear_Choice.Windows.SiteLotSelector"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:toolkit="http://schemas.microsoft.com/wpf/2008/toolkit"
     xmlns:UIControls="clr-namespace:Stemstudios.UIControls;assembly=UIControls"
     Title="Site or Lot Selector" Height="300" Width="600">
     <Window.Resources>
@@ -25,7 +24,7 @@
             <ComboBoxItem>Builder</ComboBoxItem>
             <ComboBoxItem>Misc. Client</ComboBoxItem>
         </ComboBox>
-        <toolkit:DataGrid x:Name="dgSitesOrLots" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"
+        <DataGrid x:Name="dgSitesOrLots" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"
                           AutoGenerateColumns="True" Margin="5"
                           CanUserAddRows="False" 
                           CanUserDeleteRows="False" 
