--- a/Clear Choice/Views/HomeView.xaml
+++ b/Clear Choice/Views/HomeView.xaml
@@ -39,6 +39,7 @@
                     </WrapPanel>
                 </my:CategoryExpander.Children>
             </my:CategoryExpander>
+            <Button Content="Button" Height="23" Name="button1" Width="75" Click="button1_Click" />
         </StackPanel>
     </Grid>
 </UserControl>
