--- a/Client Portal/Portal.Master
+++ b/Client Portal/Portal.Master
@@ -2,13 +2,14 @@
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http‎://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head runat="server">
     <title>
     </title>
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
     <link href="PageStyle.css" rel="Stylesheet" type="text/css" />
+    <meta http-equiv="Content-type" content="text/html;charset=ISO-8859-1" />
 </head>
 <body>
 <div style="width:100%;">
