Added tallies to Lot Extras, Time Sheets, and Transactions. Also added Notes to time sheets data grid. Renamed report to Scheduled Repairs
Signed-off-by: Phillip Couto <phillip.couto@stemstudios.com>

--- a/Clear Choice/Views/HomeView.xaml
+++ b/Clear Choice/Views/HomeView.xaml
@@ -25,7 +25,7 @@
                         <my:IconButton Source="{StaticResource home}" Text="Active Lots" MouseDown="btnActiveLots_MouseDown"/>
                         <my:IconButton Source="{StaticResource home}" Text="Completed Lots" MouseDown="btnCompletedLots_MouseDown"/>
                         <my:IconButton Source="{StaticResource symbol-gmaps}" Text="City Report" MouseDown="btnCitys_MouseDown"/>
-                        <my:IconButton Source="{StaticResource symbol-repair}" Text="Completed Repairs" MouseDown="btnCompletedRepairs_MouseDown"/>
+                        <my:IconButton Source="{StaticResource symbol-repair}" Text="Scheduled Repairs" MouseDown="btnCompletedRepairs_MouseDown"/>
                     </WrapPanel>
                 </my:CategoryExpander.Children>
             </my:CategoryExpander>
