--- a/Client Portal/Portal.Master
+++ b/Client Portal/Portal.Master
@@ -15,7 +15,7 @@
 <div style="width:100%;">
 <table id="pageBody" width="900px">
 <tr><td>
-    <img src="images/Ragno-logo.png" alt="Ragno Eletric Logo"/>
+    <img src="/images/Ragno-logo.png" alt="Ragno Eletric Logo"/>
     </td>
     </tr>
     <tr>
@@ -25,7 +25,7 @@
     <a id="lnkCustomer" href="/default.aspx">customers</a>
     <a id="lnkServices" href="/default.aspx">service</a>
     <a id="lnkContact" href="/default.aspx">contact us</a>
-    <a id="lnkPortal" href="/default.aspx">client portal</a>
+    <a id="lnkPortal" href="/portal/Login.aspx">client portal</a>
     </td>
     </tr>
     <tr>
