Completed merging and finializing build for presentation.
Signed-off-by: Phillip Couto <phillip.couto@stemstudios.com>

--- a/Clear Choice/Resources/IconSet.xaml
+++ b/Clear Choice/Resources/IconSet.xaml
@@ -22,5 +22,11 @@
     <Image Source="/Resources/Icons/symbol-repair.png" x:Key="symbol-repair"/>
     <Image Source="/Resources/Icons/symbol-timesheet.png" x:Key="symbol-timesheet"/>
     <Image Source="/Resources/Icons/symbol-timesheets.png" x:Key="symbol-timesheets"/>
+    <Image Source="/Resources/Icons/symbol-Refresh.png" x:Key="symbol-Refresh"/>
+    <Image Source="/Resources/Icons/symbol-Restricted.png" x:Key="symbol-Restricted"/>
+    <Image Source="/Resources/Icons/symbol-Check.png" x:Key="symbol-Check"/>
+    <Image Source="/Resources/Icons/reports-icon.png" x:Key="reports-icon"/>
+    <Image Source="/Resources/Icons/clock-icon.png" x:Key="clock-icon"/>
+    <Image Source="/Resources/Icons/check-icon.png" x:Key="check-icon"/>
     <Image Source="/Resources/logo2.ico" x:Key="logo"/>
 </ResourceDictionary>
