--- a/Clear Choice/MainWindow.xaml
+++ b/Clear Choice/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns:my="clr-namespace:Stemstudios.UIControls;assembly=UIControls"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="800" Width="1024" AllowsTransparency="False" WindowStyle="None" Icon="/Resources/logo2.ico">
+        Title="MainWindow" Height="800" Width="1024" AllowsTransparency="False" WindowStyle="None" Icon="/Resources/logo2.ico" Closing="Window_Closing">
     <Window.Background>
         <ImageBrush ImageSource="/Resources/Background.png" Stretch="UniformToFill"/>
     </Window.Background>
