--- a/Clear Choice/Views/LotsTotalBilled.xaml
+++ b/Clear Choice/Views/LotsTotalBilled.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Clear_Choice.Views.TotalBilling"
+﻿<UserControl x:Class="Clear_Choice.Views.LotsTotalBilled"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -33,7 +33,7 @@
                 <RowDefinition Height="Auto"/>
                 <RowDefinition/>
             </Grid.RowDefinitions>
-            <TextBlock Grid.Column="0" Grid.Row="0" HorizontalAlignment="Left" Margin="20,5,5,5" VerticalAlignment="Top" Text="Total Builded:" FontSize="20" FontStretch="Normal" Foreground="White"/>
+            <TextBlock Grid.Column="0" Grid.Row="0" HorizontalAlignment="Left" Margin="20,5,5,5" VerticalAlignment="Top" Text="Lots Total Billed:" FontSize="20" FontStretch="Normal" Foreground="White"/>
             <DataGrid Name="dgHours" Grid.Row="1" Grid.ColumnSpan="3"
                               Margin="5,16,5,5" 
                               CanUserAddRows="False" 
