--- a/Clear Choice/Views/TotalMaterialCost.xaml
+++ b/Clear Choice/Views/TotalMaterialCost.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Clear_Choice.Views.AvgLabourHoursPerHouse"
+﻿<UserControl x:Class="Clear_Choice.Views.TotalMaterialCost"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,7 +6,7 @@
              xmlns:UIControls="clr-namespace:Stemstudios.UIControls;assembly=UIControls"
              mc:Ignorable="d" 
              xmlns:toolkit="http://schemas.microsoft.com/wpf/2008/toolkit"
-             d:DesignHeight="300" d:DesignWidth="300"
+             d:DesignHeight="500" d:DesignWidth="500"
              IsVisibleChanged="UserControl_IsVisibleChanged">
     <UserControl.Resources>
         <ResourceDictionary>
@@ -31,10 +31,17 @@
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
                 <RowDefinition/>
+                <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            <TextBlock Grid.Column="0" Grid.Row="0" HorizontalAlignment="Left" Margin="20,5,5,5" VerticalAlignment="Top" Text="Select a city:" FontSize="20" FontStretch="Normal" Foreground="White"/>
-            <DataGrid Name="dgLabourHours" Grid.Row="1" Grid.ColumnSpan="3"
+            <TextBlock Grid.Column="0" Grid.Row="0" HorizontalAlignment="Left" Margin="20,5,5,5" VerticalAlignment="Top" Text="Total Material Cost" FontSize="20" FontStretch="Normal" Foreground="White"/>
+            <TextBlock Grid.Column="0" Grid.Row="1" HorizontalAlignment="Right" Margin="5" VerticalAlignment="Top" Text="Select a Client Type:" FontSize="14" FontStretch="Normal" Foreground="White"/>
+            <ComboBox Name="cmboType" Grid.Column="1" Grid.Row="1" Margin="5" SelectionChanged="cmboType_SelectionChanged" SelectedIndex="0" >
+                <ComboBoxItem>Builder</ComboBoxItem>
+                <ComboBoxItem>Misc. Client</ComboBoxItem>
+            </ComboBox>
+            <DataGrid Name="dgLabourHours" Grid.Row="2" Grid.ColumnSpan="3"
                               Margin="5,16,5,5" 
                               CanUserAddRows="False" 
                               CanUserDeleteRows="False" 
