--- a/StemStudiosControls/IconButton.xaml
+++ b/StemStudiosControls/IconButton.xaml
@@ -48,7 +48,7 @@
                 </LinearGradientBrush>
             </Border.BorderBrush>
                 <StackPanel Name="ContentPanel" Margin="5,5,5,5">
-            <Image Name="IconImage" Height="40"></Image>
+            <Image Name="IconImage" Height="48" Width="48"></Image>
             <TextBlock Name="ButtonText" VerticalAlignment="Center">
                 <TextBlock.Foreground>
                     <SolidColorBrush x:Name="ButtonTextColor" Color="#FFFFFF"></SolidColorBrush>
