--- a/Clear Choice/Views/LowAmountInvReport.xaml
+++ b/Clear Choice/Views/LowAmountInvReport.xaml
@@ -35,7 +35,7 @@
             </Grid.RowDefinitions>
             <TextBlock Grid.Column="0" Grid.Row="0" HorizontalAlignment="Left" Margin="20,5,5,5" VerticalAlignment="Top" Text="List of items" FontSize="20" FontStretch="Normal" Foreground="White" />
             <TextBlock Grid.Column="0" Grid.Row="1" FontSize="15" FontStretch="Normal" HorizontalAlignment="Left" Margin="20,5,5,5" Text="Amount is less than:" VerticalAlignment="Center" Foreground="White" />
-            <TextBox Grid.Column="1" Grid.Row="1" Height="23" HorizontalAlignment="Left" Margin="5" Name="txtQuantity" VerticalAlignment="Center" Width="66" />
+            <TextBox Grid.Column="1" Grid.Row="1" Height="23" HorizontalAlignment="Left" Margin="5" Name="txtQuantity" VerticalAlignment="Center" Width="66" Text="5"/>
             <Button Grid.Column="2" Grid.Row="1" Name ="txtOkay" Content="Find" HorizontalAlignment="Left" Margin="5" VerticalAlignment="Center" Click="txtOkay_Click" Padding="10,5,10,5"/>
             
             <DataGrid Name="dgInventory" Grid.Row="2" Grid.ColumnSpan="4"
