--- a/Clear Choice/Views/ScheduledRepairsView.xaml
+++ b/Clear Choice/Views/ScheduledRepairsView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Clear_Choice.Views.RepairsCompletedReport"
+﻿<UserControl x:Class="Clear_Choice.Views.ScheduledRepairsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
