Added and updated the printer icon
Signed-off-by: Phillip Couto <phillip.couto@stemstudios.com>

--- a/Clear Choice/Resources/IconSet.xaml
+++ b/Clear Choice/Resources/IconSet.xaml
@@ -28,5 +28,6 @@
     <Image Source="/Resources/Icons/reports-icon.png" x:Key="reports-icon"/>
     <Image Source="/Resources/Icons/clock-icon.png" x:Key="clock-icon"/>
     <Image Source="/Resources/Icons/check-icon.png" x:Key="check-icon"/>
+    <Image Source="/Resources/Icons/Normal-Printer-icon.png" x:Key="printer-icon"/>
     <Image Source="/Resources/logo2.ico" x:Key="logo"/>
 </ResourceDictionary>
