--- a/Clear Choice/Views/HomeView.xaml
+++ b/Clear Choice/Views/HomeView.xaml
@@ -41,11 +41,11 @@
             <my:CategoryExpander Source="/Resources/Icons/symbol-inventory.png" Text="Reports" Margin="0,5,0,5">
                 <my:CategoryExpander.Children>
                     <WrapPanel HorizontalAlignment="Left">
-                        <my:IconButton Source="{StaticResource symbol-emptycart}" Text="Low Stock Report" MouseDown="btnLowStock_MouseDown" Margin="5"/>
-                        <my:IconButton Source="{StaticResource check-icon}" Text="Total Extras Billed Report" MouseDown="IconButton_MouseDown_1" Margin="5"/>
-                        <my:IconButton Source="{StaticResource check-icon}" Text="Lots Total Billed Report" MouseDown="IconButton_MouseDown_2" Margin="5"/>
-                        <my:IconButton Source="{StaticResource clock-icon}" Text="Total Labour Report" MouseDown="IconButton_MouseDown_3" Margin="5"/>
-                        <my:IconButton Source="{StaticResource symbol-transactions}" Text="Total Material Report" MouseDown="IconButton_MouseDown_4" Margin="5"/>
+                        <my:IconButton Source="{StaticResource symbol-emptycart}" Text="Low Stock" MouseDown="btnLowStock_MouseDown" Margin="5"/>
+                        <my:IconButton Source="{StaticResource check-icon}" Text="Lot Extras Billed" MouseDown="IconButton_MouseDown_1" Margin="5"/>
+                        <my:IconButton Source="{StaticResource check-icon}" Text="Lot Services Billed" MouseDown="IconButton_MouseDown_2" Margin="5"/>
+                        <my:IconButton Source="{StaticResource clock-icon}" Text="Lot Labour Costs" MouseDown="IconButton_MouseDown_3" Margin="5"/>
+                        <my:IconButton Source="{StaticResource symbol-transactions}" Text="Lot/Site Material Costs" MouseDown="IconButton_MouseDown_4" Margin="5"/>
                     </WrapPanel>
                 </my:CategoryExpander.Children>
             </my:CategoryExpander>
