--- a/Clear Choice/Views/LotLabourCostReport.xaml
+++ b/Clear Choice/Views/LotLabourCostReport.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Clear_Choice.Views.TotalExtraBilling"
+﻿<UserControl x:Class="Clear_Choice.Views.LotLabourCostReport"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -32,9 +32,10 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition/>
+                <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            <TextBlock Grid.Column="0" Grid.Row="0" HorizontalAlignment="Left" Margin="20,5,5,5" VerticalAlignment="Top" Text="Total Extra Billing:" FontSize="20" FontStretch="Normal" Foreground="White"/>
-            <DataGrid Name="dgExtrabill" Grid.Row="1" Grid.ColumnSpan="3"
+            <TextBlock Grid.Column="0" Grid.Row="0" HorizontalAlignment="Left" Margin="20,5,5,5" VerticalAlignment="Top" Text="Total Labour Report" FontSize="20" FontStretch="Normal" Foreground="White"/>
+            <DataGrid Name="dgLabourHours" Grid.Row="1" Grid.ColumnSpan="3"
                               Margin="5,16,5,5" 
                               CanUserAddRows="False" 
                               CanUserDeleteRows="False" 
@@ -44,6 +45,16 @@
                               SelectionMode="Extended" HorizontalScrollBarVisibility="Hidden"
                               FontSize="12">
             </DataGrid>
+            <StackPanel Orientation="Horizontal" Grid.Row="2" Grid.ColumnSpan="3" HorizontalAlignment="Right">
+                <TextBlock Text="Average Hours" Margin="5" FontSize="14" Foreground="#FFFFFFFF" />
+                <TextBox Name="txtAvgHours" Margin="5" Background="#00FFFFFF" Foreground="#FFFFFFFF" IsReadOnly="True" Text="0"/>
+                <TextBlock Text="Average Cost" Margin="5" FontSize="14" Foreground="#FFFFFFFF"/>
+                <UIControls:SNumberBox Name="amtAvgCost" Margin="5" IsCurrency="True" IsReadOnly="True" Amount="0"/>
+                <TextBlock Text="Total Hours" Margin="5" FontSize="14" Foreground="#FFFFFFFF" />
+                <TextBox Name="txtTotalHours" Margin="5" Background="#00FFFFFF" Foreground="#FFFFFFFF" IsReadOnly="True" Text="0"/>
+                <TextBlock Text="Total Cost" Margin="5" FontSize="14" Foreground="#FFFFFFFF"/>
+                <UIControls:SNumberBox Name="amtTotalCost" Margin="5" IsCurrency="True" IsReadOnly="True" Amount="0"/>
+            </StackPanel>
         </Grid>
     </Border>
 </UserControl>
