--- a/Clear Choice/Views/ClientsView.xaml
+++ b/Clear Choice/Views/ClientsView.xaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300" IsVisibleChanged="UserControl_IsVisibleChanged">
+             d:DesignHeight="300" d:DesignWidth="300">
     <ScrollViewer>
         <StackPanel Margin="10,5,0,0" Name="Clients">
         </StackPanel>
