--- a/Clear Choice/Views/ClientView.xaml
+++ b/Clear Choice/Views/ClientView.xaml
@@ -3,10 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:toolkit="http://schemas.microsoft.com/wpf/2008/toolkit"
              xmlns:UIControls="clr-namespace:Stemstudios.UIControls;assembly=UIControls"
              mc:Ignorable="d" 
-             d:DesignHeight="767" d:DesignWidth="782" IsVisibleChanged="UserControl_IsVisibleChanged">
+             d:DesignHeight="767" d:DesignWidth="782">
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
