--- a/Clear Choice/Views/CompletedLotsReport.xaml
+++ b/Clear Choice/Views/CompletedLotsReport.xaml
@@ -4,8 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d"
-             d:DesignHeight="300" d:DesignWidth="300"
-             IsVisibleChanged="UserControl_IsVisibleChanged">
+             d:DesignHeight="300" d:DesignWidth="300">
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
