--- a/Clear Choice/Views/LotServicesBilledReport.xaml
+++ b/Clear Choice/Views/LotServicesBilledReport.xaml
@@ -6,8 +6,7 @@
              xmlns:UIControls="clr-namespace:Stemstudios.UIControls;assembly=UIControls"
              mc:Ignorable="d" 
              xmlns:toolkit="http://schemas.microsoft.com/wpf/2008/toolkit"
-             d:DesignHeight="300" d:DesignWidth="300"
-             IsVisibleChanged="UserControl_IsVisibleChanged">
+             d:DesignHeight="300" d:DesignWidth="300">
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
