--- a/Clear Choice/Views/LotView.xaml
+++ b/Clear Choice/Views/LotView.xaml
@@ -2,7 +2,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:toolkit="http://schemas.microsoft.com/wpf/2008/toolkit"
-    xmlns:UIControls="clr-namespace:Stemstudios.UIControls;assembly=UIControls" IsVisibleChanged="UserControl_IsVisibleChanged">
+    xmlns:UIControls="clr-namespace:Stemstudios.UIControls;assembly=UIControls">
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
