--- a/Clear Choice/Views/SiteView.xaml
+++ b/Clear Choice/Views/SiteView.xaml
@@ -4,8 +4,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             mc:Ignorable="d" 
-             IsVisibleChanged="UserControl_IsVisibleChanged" Loaded="UserControl_Loaded">
+             mc:Ignorable="d" Loaded="UserControl_Loaded">
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -153,7 +152,7 @@
                               IsReadOnly="True" 
                               ColumnWidth=".5*"
                               RowHeaderWidth="17" RowHeight="20" 
-                              SelectionMode="Extended" HorizontalScrollBarVisibility="Hidden"
+                              SelectionMode="Single" HorizontalScrollBarVisibility="Hidden"
                               FontSize="12"
                               SelectionUnit="FullRow"
                               MouseDown="lotGridView_MouseDown"
