--- a/Clear Choice/Views/LotRepairView.xaml
+++ b/Clear Choice/Views/LotRepairView.xaml
@@ -110,10 +110,10 @@
                     <TextBox Name="txtName" Grid.Column="1" Grid.Row="0" TextChanged="FieldTextChanged" Margin="5" MaxLength="45"/>
                     
                     <TextBlock Text="Phone:" Grid.Column="0" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-                    <TextBox Name="txtPhone" Grid.Column="1" Grid.Row="1" TextChanged="FieldTextChanged" Margin="5" MaxLength="14"/>
+                    <UIControls:SPhoneField Name="txtPhone" Grid.Column="1" Grid.Row="1" TextChanged="FieldTextChanged" Margin="5"/>
                     
                     <TextBlock Text="Alt Phone:" Grid.Column="0" Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-                    <TextBox Name="txtAltPhone" Grid.Column="1" Grid.Row="2" TextChanged="FieldTextChanged" Margin="5" MaxLength="14"/>
+                    <UIControls:SPhoneField Name="txtAltPhone" Grid.Column="1" Grid.Row="2" TextChanged="FieldTextChanged" Margin="5"/>
                     
                     <TextBlock Text="Email:" Grid.Column="0" Grid.Row="3" HorizontalAlignment="Right" VerticalAlignment="Center"/>
                     <TextBox Name="txtEmail" Grid.Column="1" Grid.Row="3" TextChanged="FieldTextChanged" Margin="5" MaxLength="150"/>
