--- a/StemStudiosControls/SNumberBox.xaml
+++ b/StemStudiosControls/SNumberBox.xaml
@@ -1,8 +1,9 @@
 ﻿<UserControl x:Class="Stemstudios.UIControls.SNumberBox"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    >
-    <Grid>
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             mc:Ignorable="d" 
+             d:DesignHeight="300" d:DesignWidth="300">
         <TextBox Name="txtValue" TextChanged="txtValue_TextChanged" PreviewTextInput="txtValue_PreviewTextInput" DataObject.Pasting="txtValue_Pasting"/>
-    </Grid>
 </UserControl>
