Added Lot Summary View and adjusted Clients view animation and bundled active and inactive lots rport into Lots by Status report.
Deployed version 1.0.1.48

Signed-off-by: Phillip Couto <phillip.couto@stemstudios.com>

--- a/Clear Choice/Views/ClientsView.xaml
+++ b/Clear Choice/Views/ClientsView.xaml
@@ -6,7 +6,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <ScrollViewer>
-        <StackPanel Margin="10,5,0,0" Name="Clients">
+        <StackPanel Margin="10,5,0,0" Name="Clients" MouseLeave="Clients_MouseLeave">
         </StackPanel>
     </ScrollViewer>
 </UserControl>
